syntax = "proto3";

package hs.proto.render;

message AtlasRender {
  string resource = 1;
  string source_id = 2;
  repeated int32 atlas_coords = 3;

}

