syntax = "proto3";

package hs.proto.ruleset;

import "l10n/localized_name.proto";
import "render/atlas.proto";

message WhittakerRegion {
  // max two elements. temperature range
  repeated int32 temperature = 1;
  // max two elements. percipation range
  repeated int32 percipation = 2;
  // add-hoc overlay implementation
  // regions in higher z-order take precendence
  // over lower z-order
}


message TerrainType {
  string id = 1;
  l10n.LocalizedName name = 2;
}


message TerrainFeature {
  string id = 1;
  l10n.LocalizedName name = 2;
}

// Root message
message Terrain {
  repeated TerrainType terrain_types = 1;
  repeated TerrainFeature terrain_features = 2;
}
